# long-context-attention

./: README.md  pyproject.toml  setup.py
.github/: publish.yml
.github/workflows/: python-publish.yml
benchmark/: benchmark_hybrid.py  benchmark_longctx.py  benchmark_longctx_qkvpacked.py  benchmark_qkvpacked_func.py  benchmark_ring_func.py  benchmark_varlen_qkvpacked_func.py
docs/: install_amd.md
ds_attn/: ulysses_attn_layer.py
ds_ulysses_attn/: __init__.py  attn_layer.py  ulysses_attn_layer.py  utils.py
long_context_attn/: __init__.py  attn_layer.py  utils.py
patches/: Megatron-DeepSpeed.patch
ring_flash_attn/: utils.py
scripts/: run_dit.sh  run_gqa.sh  run_hybrid_npu.sh  run_npu.sh  run_qkvpack_compare.sh
test/: test_hybrid_attn.py  test_hybrid_attn_npu.py  test_hybrid_qkvpacked_attn.py  test_long_context_attn.py  test_long_context_qkvpacked_attn.py  test_ring_flash_attn_func.py  test_ring_flash_attn_varlen_func.py  test_stripe_flash_attn_func.py  test_torch_attn.py  test_triton_kernels.py  test_ulysses_attn.py  test_ulysses_attn_npu.py  test_utils.py  test_zigzag_ring_flash_attn_func.py  test_zigzag_ring_flash_attn_varlen_func.py
yunchang/: __init__.py  __version__.py  globals.py
yunchang/comm/: __init__.py  all_to_all.py  extract_local.py
yunchang/hybrid/: __init__.py  async_attn_layer.py  attn_layer.py  utils.py
yunchang/kernels/: __init__.py  attention.py
yunchang/ring/: __init__.py  ring_flash_attn.py  ring_flash_attn_varlen.py  ring_flashinfer_attn.py  ring_npu_flash_attn.py  ring_pytorch_attn.py  stripe_flash_attn.py  utils.py  (+2 more)
(+7 files in other folders)
