[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yunchang"
version = "0.6.1"
authors = [
  { name="Jiarui Fang", email="fangjiarui123@gmail.com" },
]
description = "a package for long context attention"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
flash = ["flash-attn>=2.6.0"]

[project.urls]
"Homepage" = "https://github.com/feifeibear/long-context-attention"
"Bug Tracker" = "https://github.com/feifeibear/long-context-attention/issues"

[tool.setuptools]
packages = {find = {where = ["."], exclude = ["tests*", "benchmark*", "media*", "docs*", "patches*"]}}
